# Algorithm-Visualiser-Platform

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  build-and-run.bat  build-and-run.sh  deploy-docker.md  deploy.md  docker-compose.yml  package-lock.json  package.json  railway.dockerfile  render.yaml  test-build.js
backend/: Dockerfile  main.py  requirements.txt
backend/app/: main.py
backend/app/database/: __init__.py  analytics_schema.py
backend/app/models/: analytics.py
backend/app/routers/: analytics.py
backend/app/services/: analytics_service.py
backend/models/: api_models.py  tutorial_models.py
backend/services/: dp_service.py  graph_service.py  sorting_service.py  string_service.py  tutorial_service.py
backend/utils/: engine_loader.py
cpp/: CMakeLists.txt  Dockerfile
cpp/include/algorithms/: graph.h  sorting.h
cpp/include/models/: graph_models.h
cpp/src/: bindings.cpp
cpp/src/algorithms/: graph.cpp  sorting.cpp
cpp/src/bindings/: python_bindings.cpp
cpp/src/models/: graph_models.cpp
frontend/: .dockerignore  .env.example  package-lock.json  package.json  setup-env.sh  tailwind.config.js
frontend/public/: generate-assets.html  index.html  manifest.json  sw.js
frontend/scripts/: create-assets.js  create-manifest.js  generate-assets.js
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: AnalyticsErrorBoundary.jsx  ConsentBanner.jsx  EnvCheck.jsx  FeedbackModal.jsx
frontend/src/components/Contributors/: CTASection.jsx  CategoriesSection.jsx  ContributorCard.jsx  ContributorsGrid.jsx  HeroSection.jsx
frontend/src/components/Graph/: GraphCanvas.jsx  GraphInput.jsx
frontend/src/components/Layout/: Footer.jsx  Header.jsx  Layout.jsx  Navbar.jsx  Sidebar.jsx  ThemeToggle.jsx
frontend/src/components/Sorting/: AlgorithmSelector.jsx  ArrayInput.jsx  ComplexityDisplay.jsx  ControlPanel.jsx  SortingCanvas.jsx
frontend/src/components/Tutorial/: TutorialLayout.jsx  TutorialProgress.jsx  TutorialQuiz.jsx  TutorialStep.jsx
frontend/src/components/common/: ThemeUtils.jsx
frontend/src/contexts/: AlgorithmSettingsContext.js  AnalyticsContext.jsx  ThemeContext.js
frontend/src/hooks/: usePageTracking.js
frontend/src/pages/: About.jsx  AboutPage.jsx  ContributorsPage.jsx  DPVisualizer.jsx  Dashboard.jsx  Documentation.jsx  DocumentationPage.jsx  GetStarted.jsx  GraphVisualizer.jsx  Home.jsx  NotFoundPage.jsx  PerformanceAnalysis.jsx  SortingVisualizer.jsx  StringVisualizer.jsx  TutorialPage.jsx  TutorialsPage.jsx
frontend/src/services/: api.js  tutorialService.js  userPreferences.js
frontend/src/utils/: analytics.js  config.js  soundEffects.js
